--- a/index.html
+++ b/index.html
@@ -1,109 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>life</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Life</title>
+    <!--Google Font-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="cards">
-    <!--  -->
-    <div class="card card1">
-      <div class="container1">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
+    <div class="cards">
+        <!--  -->
+        <div class="card card1">
+            <div class="container">
+                <img src="las vegas.jpg" alt="las vegas">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
+        <div class="card card2">
+            <div class="container">
+                <img src="newyork.jpg" alt="New York">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
+        <div class="card card3">
+            <div class="container">
+                <img src="singapore.jpg" alt="Singapore">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
+        <div class="card card2">
+            <div class="container">
+                <img src="newyork.jpg" alt="New York">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
+        <div class="card card3">
+            <div class="container">
+                <img src="singapore.jpg" alt="Singapore">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
+        <div class="card card1">
+            <div class="container">
+                <img src="las vegas.jpg" alt="las vegas">
+            </div>
+            <div class="details">
+                <h3>Blue Cheese</h3>
+                <ul>
+                    <li>Price range: $$$</li>
+                </ul>
+            </div>
+        </div>
+        <!--  -->
     </div>
-    <!--  -->
-    <div class="card card2">
-      <div class="container2">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-    <!--  -->
-    <div class="card card2">
-      <div class="container2">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-    <!--  -->
-    <div class="card card3">
-      <div class="container3">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-    <!--  -->
-    <div class="card card2">
-      <div class="container2">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card card1">
-      <div class="container1">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">
-      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card card3">
-      <div class="container3">
-        <img class="img1" src="img/Screen Shot 2022-12-12 at 10.14.41 PM.png" alt="blue sky">
-        <img class="img2" src="img/Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="blue dream">      </div>
-      <div class="details">
-        <h3>Blue Dream</h3>
-        <ul>
-          <li>Price range: $$$$$</li>
-          <li>Hybrid</li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
