--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         <div class="card card1">
             <div class="container">
                 <img src="las vegas.jpg" alt="las vegas">
-            </div>
+                <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
@@ -25,11 +27,13 @@
         <div class="card card2">
             <div class="container">
                 <img src="newyork.jpg" alt="New York">
-            </div>
+                   <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
@@ -37,11 +41,13 @@
         <div class="card card3">
             <div class="container">
                 <img src="singapore.jpg" alt="Singapore">
-            </div>
+                <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
@@ -49,11 +55,13 @@
         <div class="card card2">
             <div class="container">
                 <img src="newyork.jpg" alt="New York">
-            </div>
+                   <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
@@ -61,11 +69,13 @@
         <div class="card card3">
             <div class="container">
                 <img src="singapore.jpg" alt="Singapore">
-            </div>
+                <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
@@ -73,11 +83,13 @@
         <div class="card card1">
             <div class="container">
                 <img src="las vegas.jpg" alt="las vegas">
-            </div>
+                <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+              </div>
             <div class="details">
                 <h3>Blue Cheese</h3>
                 <ul>
                     <li>Price range: $$$</li>
+                    <li>Hybrid</li>
                 </ul>
             </div>
         </div>
