--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
             </div>
         </div>
         <!--  -->
+        <div class="card card1">
+          <div class="container">
+              <img src="las vegas.jpg" alt="las vegas">
+              <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+            </div>
+          <div class="details">
+              <h3>Blue Cheese</h3>
+              <ul>
+                  <li>Price range: $$$</li>
+                  <li>Hybrid</li>
+              </ul>
+          </div>
+      </div>
+      <!--  -->
     </div>
 </body>
 </html>
