--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <div class="cards">
+      <div class="card card1">
+        <div class="container">
+            <img src="las vegas.jpg" alt="las vegas">
+            <img class="bud" src="images (4).png" alt="Blue Cheese">
+          </div>
+        <div class="details">
+            <h3>Junior the fag bag</h3>
+            <ul>
+                <li>Price range: free</li>
+                <li>trans</li>
+            </ul>
+        </div>
+    </div>
+    <!--  -->
         <!--  -->
         <div class="card card1">
             <div class="container">
