--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 </head>
 <body>
     <div class="cards">
-      <div class="card card1">
-        <div class="container">
-            <img src="las vegas.jpg" alt="las vegas">
-            <img class="bud" src="images (4).png" alt="Blue Cheese">
-          </div>
-        <div class="details">
-            <h3>Junior the fag bag</h3>
-            <ul>
-                <li>Price range: free</li>
-                <li>trans</li>
-            </ul>
+
+     <!--  -->
+     <div class="card card1">
+      <div class="container">
+          <img src="las vegas.jpg" alt="las vegas">
+          <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
         </div>
-    </div>
-    <!--  -->
+      <div class="details">
+          <h3>Blue Cheese</h3>
+          <ul>
+              <li>Price range: $$$</li>
+              <li>Hybrid</li>
+          </ul>
+      </div>
+  </div>
         <!--  -->
         <div class="card card1">
             <div class="container">
@@ -66,7 +67,49 @@
             </div>
         </div>
         <!--  -->
-      
+       <!--  -->
+       <div class="card card1">
+        <div class="container">
+            <img src="las vegas.jpg" alt="las vegas">
+            <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+          </div>
+        <div class="details">
+            <h3>Blue Cheese</h3>
+            <ul>
+                <li>Price range: $$$</li>
+                <li>Hybrid</li>
+            </ul>
+        </div>
+    </div>
+    <!--  -->
+    <div class="card card3">
+      <div class="container">
+          <img src="singapore.jpg" alt="Singapore">
+          <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+        </div>
+      <div class="details">
+          <h3>Blue Cheese</h3>
+          <ul>
+              <li>Price range: $$$</li>
+              <li>Hybrid</li>
+          </ul>
+      </div>
+  </div>
+  <!--  -->
+  <div class="card card2">
+    <div class="container">
+        <img src="newyork.jpg" alt="New York">
+           <img class="bud" src="Screen Shot 2022-12-12 at 11.31.07 PM.png" alt="Blue Cheese">
+      </div>
+    <div class="details">
+        <h3>Blue Cheese</h3>
+        <ul>
+            <li>Price range: $$$</li>
+            <li>Hybrid</li>
+        </ul>
+    </div>
+</div>
+<!--  -->
     </div>
 </body>
 </html>
